--- a/recommender 2.0.ipynb
+++ b/recommender 2.0.ipynb
@@ -3437,6 +3437,115 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Split the data into features and target variable\n",
+    "X = food[['Calories', 'Proteins', 'Fats', 'Carbohydrates']]  # Features\n",
+    "y = food.index  # Target variable (index)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train the KNN classifier\n",
+    "k = 1  # number of neighbors to consider\n",
+    "knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "knn.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the index for the test set\n",
+    "y_pred = knn.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict index and get food name for a new sample\n",
+    "calories = float(input(\"Enter calories: \"))\n",
+    "proteins = float(input(\"Enter proteins: \"))\n",
+    "fats = float(input(\"Enter fats: \"))\n",
+    "carbohydrates = float(input(\"Enter carbohydrates: \"))\n",
+    "\n",
+    "predicted_index = knn.predict([[calories, proteins, fats, carbohydrates]])\n",
+    "predicted_food_name = food.loc[predicted_index[0], 'Food_items']\n",
+    "print(\"Predicted Food Name:\", predicted_food_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "DisDif['Veg_Non'] = label_encoder.fit_transform(DisDif['Veg_Non'])\n",
+    "\n",
+    "# Extract features\n",
+    "X = DisDif[['Veg_Non']]\n",
+    "\n",
+    "# Perform k-means clustering\n",
+    "k = 2  # number of clusters\n",
+    "kmeans = KMeans(n_clusters=k)\n",
+    "kmeans.fit(X)\n",
+    "\n",
+    "# Get cluster centers\n",
+    "cluster_centers = kmeans.cluster_centers_\n",
+    "\n",
+    "# Get cluster labels\n",
+    "cluster_labels = kmeans.labels_\n",
+    "\n",
+    "# Assign cluster labels back to the DataFrame\n",
+    "DisDif['Cluster'] = cluster_labels\n",
+    "\n",
+    "cluster_names = {0: 'veg', 1: 'non-veg'}\n",
+    "DisDif['Cluster'] = [cluster_names[label] for label in cluster_labels]\n",
+    "\n",
+    "# Display the resulting DataFrame with cluster labels\n",
+    "print(DisDif[['Name', 'Veg_Non', 'Cluster']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_veg_nonveg(food_name):\n",
+    "    # Predict cluster label for the given food name\n",
+    "    row = DisDif[DisDif['Name'] == food_name]\n",
+    "    \n",
+    "    if not row.empty:\n",
+    "        # Retrieve the cluster name from the row\n",
+    "        cluster_name = row['Cluster'].iloc[0]\n",
+    "        return (f\"{food_name} is {cluster_name}\")\n",
+    "    else:\n",
+    "        return \"Food not found in the dataset.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_name = input(\"Enter the name of the food: \")\n",
+    "cluster_name = predict_veg_nonveg(food_name)\n",
+    "print(predict_veg_nonveg(food_name))"
+   ]
   }
  ],
  "metadata": {
