Food Name Prediction on BMR

--- a/recommender 2.0.ipynb
+++ b/recommender 2.0.ipynb
@@ -3546,6 +3546,125 @@
     "cluster_name = predict_veg_nonveg(food_name)\n",
     "print(predict_veg_nonveg(food_name))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def generate_nutrient_sets(calories_total, proteins_total, fats_total, carbohydrates_total):\n",
+    "    # Divide the total values by 5 to get target values for each set\n",
+    "    calories_target = calories_total // 5\n",
+    "    proteins_target = proteins_total // 5\n",
+    "    fats_target = fats_total // 5\n",
+    "    carbohydrates_target = carbohydrates_total // 5\n",
+    "\n",
+    "    # Initialize sets and set counter\n",
+    "    sets = []\n",
+    "    counter = 0\n",
+    "\n",
+    "    # Keep generating sets until we find 5 unique sets\n",
+    "    while len(sets) < 5:\n",
+    "        # Generate a random set of values for each nutrient\n",
+    "        calories = random.randint(calories_target - 15, calories_target + 15)\n",
+    "        proteins = random.randint(proteins_target - 7, proteins_target + 7)\n",
+    "        fats = random.randint(fats_target - 5, fats_target + 5)\n",
+    "        carbohydrates = random.randint(carbohydrates_target - 10, carbohydrates_target + 10)\n",
+    "\n",
+    "        # Check if all values are unique across all sets\n",
+    "        if not any(all(value == nutrient for value in nutrient_set) for nutrient_set in sets for nutrient in (calories, proteins, fats, carbohydrates)):\n",
+    "            sets.append((calories, proteins, fats, carbohydrates))\n",
+    "            counter += 1\n",
+    "\n",
+    "    return sets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage:\n",
+    "calories_total = 2000\n",
+    "proteins_total = 100\n",
+    "fats_total = 50\n",
+    "carbohydrates_total = 250\n",
+    "\n",
+    "generated_sets = generate_nutrient_sets(calories_total, proteins_total, fats_total, carbohydrates_total)\n",
+    "\n",
+    "print(\"Generated Sets:\")\n",
+    "for i, nutrient_set in enumerate(generated_sets, 1):\n",
+    "    print(f\"Set {i}: {nutrient_set}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_sums(random_sets):\n",
+    "    sums = {'Calories': 0, 'Proteins': 0, 'Fats': 0, 'Carbohydrates': 0}\n",
+    "    for set_values in random_sets:\n",
+    "        for i, nutrient in enumerate(['Calories', 'Proteins', 'Fats', 'Carbohydrates']):\n",
+    "            sums[nutrient] += set_values[i]\n",
+    "    return sums\n",
+    "\n",
+    "# Calculate the sums for the generated random sets\n",
+    "sums = calculate_sums(generated_sets)\n",
+    "\n",
+    "# Print the sums\n",
+    "print(\"Sum of Nutrients:\")\n",
+    "for nutrient, total in sums.items():\n",
+    "    print(f\"{nutrient}: {total}\")\n",
+    "\n",
+    "# Compare with the given totals\n",
+    "given_totals = {'Calories': calories_total, 'Proteins': proteins_total, 'Fats': fats_total, 'Carbohydrates': carbohydrates_total}\n",
+    "print(\"\\nGiven Totals:\")\n",
+    "for nutrient, total in given_totals.items():\n",
+    "    print(f\"{nutrient}: {total}\")\n",
+    "\n",
+    "# Verify if the sums are equal to the given totals\n",
+    "are_equal = all(sums[nutrient] == total for nutrient, total in given_totals.items())\n",
+    "print(\"\\nAre the sums equal to the given totals?\", are_equal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate sets\n",
+    "generated_sets = generate_nutrient_sets(2000, 100, 50, 250)\n",
+    "\n",
+    "print(\"Predicted Food Name:\")\n",
+    "# Initialize set to store predicted food names\n",
+    "predicted_food_names = set()\n",
+    "\n",
+    "# Loop through each generated set\n",
+    "for set_values in generated_sets:\n",
+    "    # Reshape the set_values to match the input format of the model\n",
+    "    X_input = np.array(set_values).reshape(1, -1)\n",
+    "    \n",
+    "    # Predict the index using the trained model\n",
+    "    predicted_index = knn.predict(X_input)\n",
+    "    \n",
+    "    # Get the predicted food name\n",
+    "    predicted_food_name = food.loc[predicted_index[0], 'Food_items']\n",
+    "    \n",
+    "    # Check if the predicted food name has not been written already\n",
+    "    if predicted_food_name not in predicted_food_names:\n",
+    "        # Write the predicted food name\n",
+    "        print(f\"{predicted_food_name}\")\n",
+    "        \n",
+    "        # Add the food name to the set of predicted food names\n",
+    "        predicted_food_names.add(predicted_food_name)"
+   ]
   }
  ],
  "metadata": {
